add chinese cultrul book notes and demo javascript

--- a/wiki/english/2010.md
+++ b/wiki/english/2010.md
@@ -1,6 +1,94 @@
 
 
-## 2010011
+
+
+
+
+
+## 201008
+
+
+### GWEN
+
+[LINK] : http://mp.weixin.qq.com/s?__biz=MzI4OTAyODUxNA==&mid=2653542269&idx=1&sn=8057ffd2dfbf19fe7661a33e35c88d56&chksm=f7e817b0c09f9ea6314ffd042b059efe4ddadd5471cf7bc96cc3a3d36facb47785a864a37d8c#rd
+
+> I must be strong and carry on
+> 
+> 'Cause I know I don't belong here in heaven
+
++ carry on/here in连读
+
+请继续说：Sorry, I interrupted you. Please carry on.（美：go ahead）
+
+
+
+carry on doing XX 继续做XX
+
+
+
+Rachael Carr intends to carry on teaching .
+
+雷切尔·卡尔打算继续教书。
+
+
+
+* 'cause是because在口语里的缩写式。有时写为cuz等。
+
+
+
+2. 词链儿：I don't belong here.  我不属于这（我不应该在这）。
+
+belong here   应在这里
+
+
+
+词链儿造句：
+
+I don't belong here.
+
+She doesn'tbelong there.
+
+You don't belong here.
+
+Mike didn't belong there.
+
+
+
+拓展：belong 常见用法
+
+① sense of belonging  归属感
+
+
+
+②belong to XX   属于XX
+
+This book belongs to me.
+
+
+
+③ belong together 属于彼此（恋人关系）
+
+I really think that we belong together.
+
+我真的觉得我们属于彼此。
+
+He belongs with me. 
+
+他是我的。
+
+
+
+
+### LIKE HELL
+
+like hell
+
+
+### "Uh"&"Um"
+
+
+
+## 201001
 ### “十四五”规划编制 14th Five-Year Plan formulation
 
 https://language.chinadaily.com.cn/a/202010/01/WS5f754630a31024ad0ba7cfa5.html
