add english learning article

--- a/wiki/english/2010.md
+++ b/wiki/english/2010.md
@@ -1,93 +1,4 @@
 
-
-
-
-
-
-
-## 201008
-
-
-### GWEN
-
-[LINK] : http://mp.weixin.qq.com/s?__biz=MzI4OTAyODUxNA==&mid=2653542269&idx=1&sn=8057ffd2dfbf19fe7661a33e35c88d56&chksm=f7e817b0c09f9ea6314ffd042b059efe4ddadd5471cf7bc96cc3a3d36facb47785a864a37d8c#rd
-
-> I must be strong and carry on
-> 
-> 'Cause I know I don't belong here in heaven
-
-+ carry on/here in连读
-
-请继续说：Sorry, I interrupted you. Please carry on.（美：go ahead）
-
-
-
-carry on doing XX 继续做XX
-
-
-
-Rachael Carr intends to carry on teaching .
-
-雷切尔·卡尔打算继续教书。
-
-
-
-* 'cause是because在口语里的缩写式。有时写为cuz等。
-
-
-
-2. 词链儿：I don't belong here.  我不属于这（我不应该在这）。
-
-belong here   应在这里
-
-
-
-词链儿造句：
-
-I don't belong here.
-
-She doesn'tbelong there.
-
-You don't belong here.
-
-Mike didn't belong there.
-
-
-
-拓展：belong 常见用法
-
-① sense of belonging  归属感
-
-
-
-②belong to XX   属于XX
-
-This book belongs to me.
-
-
-
-③ belong together 属于彼此（恋人关系）
-
-I really think that we belong together.
-
-我真的觉得我们属于彼此。
-
-He belongs with me. 
-
-他是我的。
-
-
-
-
-### LIKE HELL
-
-like hell
-
-
-### "Uh"&"Um"
-
-
-
 ## 201001
 ### “十四五”规划编制 14th Five-Year Plan formulation
 
@@ -134,6 +45,230 @@ When making plans for the 14th Five-Year period (2021-2025), we must insist that
 - The moon is a moon still, whether it shines or not.或明或暗, 月亮总是月亮。
 - The moon is not seen where the sun shines.太阳一出,月亮失色；小巫见大巫。
 
- 
+## 1003
+### 我会给他一个无法拒绝的条件
+> I'm gonna make him an offer he can't refuse.
+> 《教父》
+
+
+
+## 1004
+####  跌倒了，是为了再重新站起来
+> Why do we fall? So we can learn to pick ourselves up.
+>《蝙蝠侠：侠影之谜》
+
+## 1006
+### 我心永恒
+> Near, far, wherever you are, I believe that the heart does go on.
+
+### “上梁不正下梁歪”
+A fish rots from the head.字面的意思就是“鱼烂先烂头”引申出来的意思就是“上梁不正下梁歪”，领导不力导致下层混乱。我们还可以说：Fish begins to stink at the head；The fish rots from the head down.
+1. The apple doesn't fall far from the tree.
+   - 这个表达常用来形容孩子的行为或外表和父母是相似的，或者下级的行为习惯跟上级相像。可以分别用在褒义或贬义的语境之中。用在褒义的语境中可以翻译成：虎父无犬子。用在贬义的环境中可以翻译成：上梁不正下梁歪；有其父必有其子......
+   - Research shows that children of criminals have a higher chance to become criminals themselves.
+   - I'm not surprised. The apple doesn't fall far from the tree.
+   - 有调查显示罪犯的孩子成为罪犯的可能性更高。
+   - 不足为奇，上梁不正下梁歪嘛。
+   - Henry's father was a well-respected judge before he retired.
+   - The apple doesn't fall far from the tree. Henry is a very well lawyer.
+   - 亨利的爸爸在退休前是个受人尊敬的法官
+   - 虎父无犬子，亨利也是个好律师。
+2. Like father,like son.这个表达理解起来很简单，用在贬义的语境中就可以翻译成“有其父必有其子”；“上梁不正下梁歪”
+
+- Don't you think your son smokes too much?
+
+- Like father, like son. His father smokes more.
+
+- 你不觉得你儿子抽烟抽得太凶了吗？
+
+- 上梁不正下梁歪，他爸更能抽。
+
+
+
+
+#### feel like a fish out of water 
+对陌生环境感到不适应
+
++ A  girl from northern China would feel like a fish out of water when coming to southern China. 北方女孩来到南方会感到很不适应。
+
+#### fish about/around
+在包里；口袋里到处翻找
++ Why don't you put your phone in your pocket, in case that you need to fish around in your purse every single time it rings. 你怎么不把手机放口袋里,省得每次来电话都要在包里翻来翻去。
+
+
+#### there are plenty more fish in the sea 天涯何处无芳草
++ Mary just broke up with her boyfriend who'd been going out with her for years. I just had to comfort her that there were plenty more fish in the sea though she used to take him as her ocean. Mary和处了好几年的男朋友分手了。我只能安慰她天涯何处无芳草。虽然我知道，他曾是她的全世界。
+
+#### have bigger/other fish to fry 
+另有他图；还有更重要的事情要做
+
+- We are going to the movies tonight. Would you like to join us?
+- Sorry. No. I have bigger fish to fry.
+- 我们今晚去看电影，你来吗？
+- 不了，我还有别的事情。
+
+#### neither fish or fowl
+不伦不类. fowl在这里是家禽的意思，形容一个东西既不是家禽也不是鱼，引申为“不伦不类”；“不三不四”
+
++ You wear like neither fish or fowl. 你穿的不伦不类的。
+
+#### drink like a fish
+习惯性的豪饮；饮酒过度；酗酒；酒量大
+
++ I don't want you to get away with the impression that I drink like a fish. I just don't want you to drink too much. 我不想让你误以为我是个酒鬼。我只是不想让你喝太多。
+
+
+
+## 1007
+
+
+### GWEN
+
+[LINK] : http://mp.weixin.qq.com/s?__biz=MzI4OTAyODUxNA==&mid=2653542269&idx=1&sn=8057ffd2dfbf19fe7661a33e35c88d56&chksm=f7e817b0c09f9ea6314ffd042b059efe4ddadd5471cf7bc96cc3a3d36facb47785a864a37d8c#rd
+
+> I must be strong and carry on
+> 
+> 'Cause I know I don't belong here in heaven
+
+- carry on doing XX 继续做XX
+- Rachael Carr intends to carry on teaching .雷切尔·卡尔打算继续教书。
+- cause是because在口语里的缩写式。有时写为cuz等。
+- sense of belonging  归属感
+
+### LIKE HELL
+like hell
+### "Uh"&"Um"
+
+
+## 1008
+
+### 此情可待
+> Oceans apart day after day
+> 
+> And I slowly go insane
+>
+> I hear your voice on the line
+> 
+> But it doesn't stop the pain
+
+
++ go insane 强调“变疯”
++ be insane 强调“疯了”的状态
+
+
+### have a ball
+
+Ball除了“球”之外还有“舞会”的意思。能参加舞会自然意味着可以尽情的吃喝玩乐咯~。随着时间的推移，have a ball的意思也就逐渐引申出了have a good time的意思。 
+
+“尽情狂欢，玩得嗨，过得愉快”
+
+
+#### the ball is in your court
+if the ball is in someone’s court, they have to do sth before any progress can be made in a situation看到英文的惯用语，通常不能照字面上来翻译。这一句The ball is in your court字面意思：球在你的场内。当你得到球时，你就掌握了决定权，所以当别人和你说这句话时，代表他们在等你的决定，或是他们对你的想法不打算表达意见。“轮到某人作出反应（或采取行动）”
+
+
+- It’s up to you what to do—the ball is in your court now.要做什么取决于你—现在就看你的了。
+- Well, that's what I know about it. Now the ball is in your court.好，我对此事知道的就这些了，现在该你讲了。
+
+#### on the ball
+
+这里可不要理解为“在球上”棒球是美国最流行的体育项目，所以有多来自棒球的常用语也不足为奇。据说在棒球运动中，高技术投手的球很难被接到，但如果机灵、反应迅速的话，就可以接到球啦~所以这个小短语表示“机灵，灵敏；工作能力强”
+- Watch his bread, it seems to be delicious. He had a lot on the ball.看他烤出来的面包，看上去很好吃，他真能干。
+
+#### not on the ball
+加了否定词not，也就是“反应迟钝，不在状态”的意思啦~
+
+I didn’t sleep well last night and I’m not really on the ball today.我昨晚没有睡好，所以今天反应迟钝。
+
+
+#### start the ball rolling
+start可以替换为get/set/keep
+
+to do sth which starts as an activity, or to start doing sth in order to encourage other people to do the same.着手干，开始做；带头做
+
+- I decided to set the ball rolling and got up to dance.我决定带个头，就站了起来跳舞。
+- Gentlemen, perhaps I should start the ball rolling.诸位先生，或许应该由我来开个头。
+
+#### have the balls to do sth
+
+有胆量做… 同样可以将balls替换为guts/courage
+
+I don't have the balls to say that.我可没有胆量那样说。
+
+#### drop the ball
+to make a mistake, especially by doing something in a stupid or careless way犯错，处理失当
+
+- What happened? Who dropped the ball on this?怎么了？是谁搞砸了？
+- I never drop the ball on any project or task.我从没有搞砸任何一项工作。
+
+
+#### a ball of fire
+充满活力和热情的人；生龙活虎的人；朝气蓬勃的人
+
+- Kim isn't a good student, but on the basketball court he's a ball of fire.Kim不是个好学生，但是在篮球场上他非常活跃。
+- He may appear lazy, but while at work he becomes a ball of fire.他看上去很懒，但工作起来却是风风火火。
+- I hope John will join us, he is a fireball (or he is a ball of fire).我希望约翰能加入我们，他是个精力旺盛的人。
+
+
+### bring a date 
+带个伴侣（这里date做名词，表示“约会对象，伴侣”）
+
+- I have no idea you were bringing a date. How delightful.我完全不知道你会带一个伴侣来。真是太好了。
+
+### icebreaker
+sth that you say or do to make people less nervous when they first meet（彼此不认识的人见面时）活跃气氛的活动
+- When you realize the best icebreaker is a few words from the heart, the act of starting a conversation becomes far less daunting.当你明白打破沉默最好的方式就是说心里话后，再想发起谈话就没那么可怕了。
+
+### have a crush on
+喜欢上… 迷恋
+- You seem to have a crush on him.你看起来像是迷上他了。
+#### lucky me
+我真幸运
+- Lucky me! Oh, my God! That is good news!我真幸运！天啊，真是好消息！
+
+## 1009
+### 努力工作加上一点好运，我迟早会成功！
+> I've always believed that with hard work and a little luck, it's only a matter of time before I'm discovered! 
+
+
+### restore
+恢复（某种情况或感受）
+- The operation restored his sight/vision.手术使他恢复了视力。
+
+
+## 1010
+### 大的成就始于小的开始
+> Big things have small beginnings.
+> 《阿拉伯的劳伦斯》
+
+### “唯命是从”
+
+“enact his will without qualms and questions. ”这个表达的字面意思就是不带任何顾虑和质疑地将某人的意愿付诸行动。但是我们博大精深的汉语用四个字就可以表达得清清楚楚啦！当我们想表达“听XX使唤”；“任XX差遣”;"听命于XX“”等意思时，都可以用这个表达。那么关于“唯命是从”还有哪些表达呢？我们一起来学习一下吧！
+
+
+1. do one's bidding （without qualms and query）
+- I think Collins was his creature and does his bidding without qualms or query.我觉得柯林斯已经是他的人了，会毫不质疑地听他使唤。
+2. do what XX ask
+- Why can't you do what I ask?你怎么就不能乖乖听话？
+3. take orders from
+- I take orders from your father not you.我听命于你爸爸，而不是你。
+
+
+### have（no) qualms about XX  
+对XX（没）有顾虑
+- Don't you have any qualms about screwing over your best friend.你难道对欺骗最好的朋友没什么过意不去的吗？
+
+### moral qualms/qualms of conscience 道德谴责/良心谴责
+- Those teachers who beat children should have moral qualms of conscience.打孩子的老师应该会受到自己良心的谴责。
+
+### “狗腿子”--errand boy 
+
+errand是‘’差使"的意思,那么errand boy就是跑腿的人，听使唤的人。这个表达可以分别用在褒义和贬义的环境中。
+- He is not her boyfriend. He is like her errand boy who enacts her will without qualms or questions. 他不像她的男朋友。而是像一个唯命是从的狗腿子。
+
+#### Uncle Tom
+
+这个表达源自哈丽雅特 · 比彻 · 斯托所著长篇小说《汤姆叔叔的小屋》中的人物。旧时有时用以指想讨好或侍奉白人的黑人男子。在某些语境下可以用来指代“逆来顺受，唯命是从”的人。贬义的语境下可以翻译成“狗腿子”。
+- Don't take me as your Uncle Tom! I won't run errands for you!我可不是你的狗腿子，我不会为你跑腿儿。
 
 
