finish some work

--- a/wiki/eng/2011.md
+++ b/wiki/eng/2011.md
@@ -51,12 +51,68 @@
     - I lost all track of time (= forgot what time it was) .我一点儿也说不准现在是什么时间。
 
 
+## 1105
+### 生活总有磕磕碰碰，关键在于和谁一起去面对
+
+> There will always be struggle. You just have to pick who you want to struggle with.
+
+- choose、pick和select 
+  - choose用法最广，表示“选择，挑选”，侧重于通过意志或判断，是最普通的用语。
+  - select “精选，挑选”，是指从同类的许多东西中仔细辨别后选择，挑选最合适的，从而淘汰一部分。
+  - pick “挑选，挑捡”，是仔细挑剔和苛刻地选择，多指挑选有形的东西。
+    -  pick and choose 挑三拣四
+       -  And he gets to pick and choose who gets culled, does he？所以是由他来决定谁被淘汰，是吗？
+    - cherry-pick 精挑细选 点击回顾
 
 
 
+## 1106
+### 去找到那个不在乎你温柔还是倔强、美丽还是丑陋的人吧！
+> The best thing you can do is find a person who loves you for exactly what you are. Good mood, bad mood, ugly, pretty, handsome, what have you.
+
+- loves you for exactly what you are 就因为你是怎样的人而爱你
+- (and/or) what have you 等等/诸如此类/无论你具备什么 =things like that/you name it 一般用于列举事物时的句子末尾
+  - Their garage is full of bikes, sleds, old boots, and what have you. 仓库里什么都有。自行车、雪橇、旧靴子...要啥有啥。
+  - The merchant sells writing paper, pens, string, and what have you. 这位商人卖纸张、钢笔、线绳...啥都卖。
+  - He does all sorts of things — building, gardening, fencing and what have you.  他什么都干。盖房子、搞园艺、修篱笆...好多呢
+
+## 1107
+### [向死而生](https://mp.weixin.qq.com/s?__biz=MzI4OTAyODUxNA==&mid=2653543280&idx=2&sn=03e93d178386637dc32a3c0ce7daf864&chksm=f7e81bbdc09f92ab08241502c5245570e1cea0998a3af53124263c442e10c06039c7836f28bb#rd)
+> We need to lift our sights, set our sights on well-being, so that life can be about making life more wonderful, rather than just less horrible. 《TED演讲：向死而生》
 
 
 
+## 1108
+### 三块广告牌
 
+> I don't care if you never did shit or never saw shit or never heard shit. You joined the gang, you're culpable.
+> 《三块广告牌》
 
+## 1109
+###  Word Power Made Easy:
+- camera(照相机)是拉丁语camera obscura的缩写，camera=room(房间)，obscura=dark(黑暗的)，合起来是“暗室”的意思。
+  - 拉丁语camera obscura原本指一种光学仪器，由小盒子和棱镜组成，用于研究小孔成像等光学问题，科学家开普勒最早使用这个术语。
+  - 16世纪文艺复兴时期，欧洲出现了供绘画用的camera obscura。通过这种光学仪器把景象投射到纸上，再由画家画下来。
+  - 18世纪初期，人们发明了感光胶卷，可以直接把画面记录下来，不需要人手工去画了。这就是最早的光学照相机。由于脱胎于camera obscura，所以也称为camera obscura。后来照相机流行后，简化为camera。
+  - 如果进一步细分，camera可以分解为词根camer-(房间)和名词后缀-a。chamber(房间、室)就来自词根camer-(房间)，在经由法语时拼写形式发生了较大变化，前面的c-变成ch-，中间的m后面加了b，因为法国人觉得鼻音字母m不好发音，所以在后面加了一个b，这样就好发音了。类似的还有remember(记得)，也是在鼻音字母m后面添加了一个b以便发音。
+  - 来自词根camer-(房间)的还有bicameral(两院制的)，前缀bi-(二)，加形容词后缀-al，构成形容词，字面意思“有两个房间的”，特指在政治体制中有上下两个议院的。
+- 词根camer-：房间
+  - camera` ['kæm(ə)rə]` n.照相机，摄像机
+  - chamber `[ˈtʃeɪmbə(r)]` n.厅，堂，膛，房间，会所
+  - bicameral `[ˌbaɪˈkæmərəl]` adj.两院制的，有两个议院的
+
+- 加拿大(Canada)是世界上国土面积第二大的国家，仅次于俄罗斯。Canada原本指的是个小小的村庄而已。16世纪初，法国探险家卡蒂埃乘船横渡大西洋驶抵加拿大的圣劳伦斯海湾。他沿着圣劳伦斯河逆流而上，到达魁北克地区。登陆后，在一个印第安人村庄里，卡蒂埃向当地印第安人打听这个地方。当地人指着村庄高声说道“Canada”，在印第安语中意思是“村庄”。卡蒂埃误以为这是当地的地名，赶紧将发音记录下来，这就是Canada的来源。此后欧洲殖民者们便将这个地方称为Canada，包含的范围越来越广，最终变成了对整个加拿大的称呼。派生出形容词Canadian，意思是“加拿大的”，作名词表示“加大拿人”。
+  - Canada [ˈkænədə] n.加拿大
+  - Canadian [kəˈneɪdiən] adj.加拿大的，加拿大人的 n.加拿大人
+
+-  have to be somewhere必须去某地
+-  have to run必须得走了
+-  be pressed for time时间紧
+-  need to run需要赶紧走了
+-  have to catch必须赶乘（交通工具）
+-  in rush匆忙，赶时间
+-  have to go必须离开
+-  short on time时间紧
+-  in hurry赶时间
+   -  don＇ t have much time没有多少时间
 
