--- a/wiki/eng/2011.md
+++ b/wiki/eng/2011.md
@@ -116,3 +116,43 @@
 -  in hurry赶时间
    -  don＇ t have much time没有多少时间
 
+## 1111
+### 我们人类更关心拥有，而不是存在
+> We humans are concerned more with having than being.
+- having/being
+  - have—“有”，侧重“拥有”的动作
+  - be—“是”，表状态
+
+
+
+## 1112
+### 一些人认为理所当然的事情，其他人却在为之奋斗
+> While there's a lot that I don't know at my age, what I do know is this: what some people take for granted, others are fighting for.
+
+- take for granted 认为XX理所应当/想当然 
+  - He took me for granted. 他不把我当回事。
+  - The boss takes us for granted, but if we weren't here, this whole company would collapse. 老板总是想当然。要是我们不在，估计公司都塌了。
+  - I came into adult life clueless about a lot of things that most people take for granted .我已成年，却对许多大部分人认为理所当然的事情一窍不通。
+  - ...which you and I take for granted if we gift them a past. 你我视为理所当然的体验，如果我们赐予他们过去。
+  - I want you to know that I do not take that for granted.我非常感激你的好意（不认为你的好意理所应当）。
+
+
+## 1113
+
+> Any man's death diminishes me,
+> 
+> because I am involved in mankind.
+> 
+> And therefore never send to know for whom the bell tolls;
+> 
+> it tolls for thee.
+
+- never send to know for whom the bell tolls=never send to know the bell tolls for whom
+  - toll verb. 鸣(钟), 敲(钟) (为报死亡时刻、噩耗等)鸣钟;
+  - toll the bell 鸣钟
+  - toll 造成损失、尝到苦头
+  - High energy costs are taking a major toll on the poor.高昂的能源价格给穷人带来了沉重的打击。
+  - Competing with Mr.Soze has taken its toll.与苏斯先生对抗的人，已经尝到了教训。
+
+
+
