--- a/wiki/language/eng/2009.md
+++ b/wiki/language/eng/2009.md
@@ -1,3 +1,465 @@
+it's not the case for all the
+
+ranging from
+
+an asset of our life 
+
+most- read
+
+At this to say
+
+rather depressed 相当萧条
+
+verbal skell
+
+make sense on some level 
+
+longstanding
+
+subtly 微妙的
+
+dualty 双重
+
+there is no denying that 
+
+yet
+
+a great deal with +n
+
+a great many of
+
+a goud cominand of 
+
+Generally speaking 
+
+other than
+
+probably
+
+Follawing wth = after 
+
+festive occosion
+
+expomentinlly 
+
+miraoulous 
+
+respecotive 范围 
+
+confines of ..的范围
+
+unassailable 无解可击的
+
+steady increase
+
+countries and regions 
+
+overseas countries 
+
+a great fead
+
+exhibit =show 
+
+prestige 威望 
+
+make people irritable 
+
+veritably, 真正地
+
+target
+
+soaring by years
+
+
+
+
+## 重说一下
+
+1. Sorry? 什么？
+2. Excuse me? 对不起？
+3. Pardon? 对不起你说什么？
+4. I beg your pardon. 请再说一遍。
+5. What was that ? 你刚说什么？
+6. What did you say ? 你刚说什么？
+
+
+
+1. I don’t understand could you say that again please. 我不明白你能再说一遍吗？
+2. Sorry what did you just say? 对不起，你刚才说什么？
+3. What did you say just then? 你刚才说什么？
+4. Sorry I didn’t quite catch that. 对不起，我没听清楚。
+5. Sorry I didn’t quite… 对不起，我不太……
+6. Would you mind speaking… 你介意说…
+7. Sorry I’m not following… 对不起，我没听懂……
+8. Wait a second I’m a bit lost. 等一下，我有点迷了。
+9. I’m sorry to interrupt but… 很抱歉打断一下，但是…
+10. Would you mind slowing down a bit? I’m struggling to follow. 你介意慢一点吗?我很难跟上。
+
+### 9.9 早读
+
+> **You only need the light when it's burning low**
+>
+> **Only miss the sun when it starts to snow**
+>
+> **Only know you love her when you let her go**
+
+
+
+**拓展：only when 倒装句**
+
+only位于句首时，主句部分倒装：only + 状语从句+倒装句
+
+***Only when*** he told me did I realize what trouble he was in.
+
+他告诉我时我**才**意识到他面临的问题。
+
+***Only when*** everything is OK will the patent be registered.
+
+**只有**一切都没有问题时，专利**方可**注册。
+
+***Only when*** efficiency is improved can people enjoy more convenience.
+
+**只有**提高效率**才**能让人们享受更多方便。
+
+It's ***only when*** we wake up,that we realize something was actually strange.
+
+**只有**等我们醒来后，**才**会意识到不对劲。
+
+
+
+**burn low 烧得低 →（蜡烛）快要烧尽**
+
+**3. 词链儿：let XX go 让XX走** 
+
+**let go的两种释义：**
+
+**① 释放**
+
+I love fishing but hate killing animals, so I ***let*** whatever I catch ***go***.
+
+我喜欢钓鱼，但痛恨杀生。所以无论我抓到什么都会**放走**。
+
+Don’t ***let go*** of my hand, or you’ll get lost.
+
+别**放开**我的手，不然你会迷路的。
+
+**② 解雇**
+
+I'm worried that they'll ***let*** me ***go*** once this special project is over.
+
+我担心项目结束他们就会**解雇**我。
+
+
+
+
+
+### 背黑锅
+
++ **take the rap for…**
+
+I'm not going to **take the rap for you**.
+
+我才不**替你顶罪**呢。
+
+I don't want to **take the rap for** Mary, who forgot to mail the check in time.
+
+玛丽忘了及时邮寄支票，我可不想**替**她**承担这个责任**。
+
+
+
++ **take/get/bear the blame for ...** 背黑锅，代人受过
+
+Why should I **take the blame for** his mistakes?
+
+他的错为什么要我来**背锅**？
+
+
+
++ **take a/the fall for sb**: 常会设计一些状况让别人take the fall 。 代人受罪；代人受过
+
+You let me **take the fall**.
+
+你让我替你**背黑锅**。
+
+I wasn't going to **take the fall for him**.
+
+我不会**替他背黑锅**。
+
+
+
++ **throw XX under the bus**: **原本要和别人一起做某件事，但却为了保护自己的利益而出卖别人**。
+
+You’d **throw me under the bus**?
+
+你要让我**背黑锅**么？
+
+I mean, you’re **throwing her under the bus.**
+
+我是说，你**正在把她拖下水**呢。
+
+
+
++ **hold the bag: 一人为许多人的错误和罪行承担责任。**
+    + sb be left holding the bag
+    + leave sb holding the bag
+
+I’m not gonna **leave you holding the bag**. Okay?
+
+我不会**让你一个人独自承担**的，好么？
+
+He committed crime but let me **hold the bag.**
+
+他犯了罪，却让我替他**背黑锅**。
+
+
+
++ **carry the can (for sb/sth)** **代人受过，替别人承担责任**”。
+
+I don't see why I should **carry the can for his mistakes.**
+
+我不明白为什么要我**为他的错误承担责任**。
+
+
+
++ **shirk one's responsibility**: 推卸责任
+
+Adults like to **shirk responsibility**, prefer to blame for their own children and so on.
+
+成人喜欢**推卸责任**，喜欢把责任归于孩子自身等等。
+
+
+
++ **pass the buck**: **推卸责任**
+
+You were the one who took on this job. Don't try to **pass the buck**.
+
+是你接手这项工作的，别想**推卸责任**。
+
+
+
++ **the buck stops here**
+
+You don't have to worry about the problem. I'm the manager, and the **buck stops here**.
+
+你们毋须为这个问题而担心。我是经理，**会负起全责。**
+
+Truman was President from 1945 to 1952, he was a man who *did not paly the blame game*. He has a sign on his desk: "**The Buck Stops Here.**"
+
+杜鲁门从1945年到1952年担任美国总统，他是一个*不推诿责任的人*，他办公桌上有一块牌子，上面写着：“**我负****责**。”
+
+
+
++ **put/pin the blame on sb**: 把责任推到某人身上，把锅甩给某人，委过于人
+
+If I mess up, I must accept that and not try to **put the blame on others**.
+
+如果我做得不好，我必须接受，并且不**把过失推卸给别人。**
+
+
+
++ **shift the blame onto sb**: 推卸责任给…
+
+You should have the courage to face your own mistakes. Don't try to **shift the blame onto others** when things go wrong.
+
+要有勇气面对自己的失误，不要出了问题就想**把责任推到别人身上去**。
+
+
+
++ **scapegoat**
+
+When things don’t go well, people always look for a **scapegoat**.
+
+事情不顺利时，大家总是要找个**替罪羊。**  
+
+
+
++ **fall guy**: 是指被诱骗为他人的犯罪或不正当行为担责的人。在出问题时**公开承担责任的替罪羊**。
+
+He would always use Jack as the **fall guy** when he makes a mistake.
+
+每次他犯错误的时候他总是让杰克当**替罪羊。**
+
+
+
++ **whipping boy**: “**任何为他人担当罪责、代人受过的人**”。
+
+He does not want to be a **whipping boy** anymore.
+
+他不要再做**替罪羔羊**。
+
+
+
+### 9.10 早读
+
+> **Just when you think you know something, you have to look at it in another way. Even though it may seem silly or wrong, you must try.**
+
+1. **词链儿：Just when...正当...时**
+
+***Just when*** we thought all hope was lost, our noble saviors have arrived.
+
+**正当**我们以为希望尽失**时**，我们尊贵的救世主来了！
+
+***Just when*** you thought things couldn't get more exciting...
+
+**正当**你以为比赛已经够精彩**时**...
+
+
+
+**[拓展：just because...doesn't mean... 某事发生并不代表...](http://mp.weixin.qq.com/s?__biz=MzI4OTAyODUxNA==&mid=2653526467&idx=1&sn=dab1fcaa7a57698c7ca9f4e059ffb6d0&chksm=f7e8590ec09fd018901eaee02c3da95f4541648454d4d75f02a8de2e915028b0d8b842e1798b&scene=21#wechat_redirect)**
+
+> **Don't ever let anyone take your power away or make you feel that you can't have an impact in the world just because they said so.**
+
+**[词链儿：](http://mp.weixin.qq.com/s?__biz=MzI4OTAyODUxNA==&mid=2653511292&idx=2&sn=69a16dea9151bfac6b41797fe1c48e6e&chksm=f7e89eb1c09f17a7233fe2577c66f0d000e8867c41f6478b4a400c0f4a8c714a60ff49e4b7a9&scene=21#wechat_redirect)take XX away 拿走XX /去除XX**
+
+
+
+Computer, ***take away*** two wrong answers, please.
+
+ 请电脑**去掉**两个错误答案。
+
+**. 词链儿：have an impact in the world 在世界里产生影响（在世界里有所作为）**
+
+**have an impact on the world 对于世界产生影响**
+
+
+
+**词链儿拓展：对XX有影响、冲击 have an impact on somebody/something**
+
+
+
+The computer ***had made a*** great ***impact on*** modern life.
+
+计算机**对**现代生活产生了巨大**的影响.**
+
+The only thing I ***have an impact on*** was the sidewalk. 要说我我现在唯一能**对什么产生影响**的，就只有人行道了。
+
+**3. 词链儿：just because they said so 就因为他们这么说了**
+
+
+
+**词链儿：don't ever... just because they said so. 不要因为别人说了什么，你就...**
+
+造句：**不要因为别人说你不行**，你就妄自菲薄。Don't ever feel inferior, ***just because they said you can't.***
+
+**拓展词链儿：Just because... doesn't mean... 就因为...不代表...**
+
+***Just because*** you can affort it, ***doesn't mean*** you should buy it. 
+
+买得起**不代表**应该买。
+
+***Just because*** I am laughing ***doesn't mean*** that I am happy. 
+
+我在笑**不代表**我开心。
+
+***Just because*** spoken English is not easy to learn ***doesn't mean*** that I should give it up. 
+
+**不能****因为**英语难学我**就要**放弃。
+
+[**点击跳转：Just because...doesn't mean...**](http://mp.weixin.qq.com/s?__biz=MzI4OTAyODUxNA==&mid=2653511213&idx=2&sn=34f07c436ccbaada677bdf572e3fd235&chksm=f7e89ee0c09f17f6dac3719a5de00c12961a56d61ca0b7135933c148f9e49e38c8fce06d8eca&scene=21#wechat_redirect)
+
+
+
+2. **词链儿：look at it in another way 以不同的角度看它**
+
+Well, ***looked at it in another way***.
+
+我**换了个角度看问题**。
+
+
+
+
+
+### 9.11 早读
+
+>  **Because we don't know when we will die, we get to think of life as an inexhaustible well.**
+
+
+
+**get to : **
+
+**① 到达、够到**
+
+When we ***get t******o*** the store we'll talk to the manager.
+
+我们**到了**商店会和经理谈。
+
+
+
+**② 开始做某事**
+
+Let's ***get to*** this business right now. 
+
+我们**开始**干正事吧！
+
+
+
+**③ 影响（负面）**
+
+This loud music really ***gets to*** me.
+
+这吵闹的音乐**激怒**到我了。
+
+Don’t let things ***get to*** you. 
+
+别让事情**影响**到你。
+
+
+
+**④ 能够**
+
+I'm happy when I ***get to*** learn.
+
+当我**能**学到东西时，我很开心。
+
+Because I'm in comments usually, I ***get to*** participate with you.
+
+因为我经常在留言区，所以**能**和你们互动。
+
+
+
+**an inexhaustible well 一口永不会枯竭的井**
+
+**in+exhaust（疲惫、耗尽）+ible 永不枯竭的**  
+
+
+
+…by the ***inexhaustible*** variety of life.
+
+...生命**取之不尽****的**丰富。
+
+
+
+…are the most ***inexhaustible*** source of magic.
+
+...最**取之不尽用之不竭的**资源。
+
+
+
+
+
+**构词形式同**：
+
+- innumerable adj. 数不尽的
+- inseperatable adj. 无法分离的
+- unacceptable adj. 不能接受的
+- unexplainable adj. 无法解释的
+
+
+
+*Because we do not know when we will die，we get to think of life as an* *inexhaustible* *well. And yet everything happens only a certain number of times.And a very small number really.*
+
+*因为不知何时死之将至，我们乃将生命视为无穷无尽任意挥霍的源泉。然而，生命中发生的事情仅有那么几次，是的，或许只是一次。*
+
+——Brandon Lee
+
+
+
+
+
+
+
+
+
 
 
 
