--- a/wiki/language/eng/2012.md
+++ b/wiki/language/eng/2012.md
@@ -33,7 +33,6 @@
 6. The journey of a thousand miles begins with one step. - Lao Tzu
 6. From small beginnings come great things. - Anonymous
 6. It's so fine and yet so terrible to stand in front of a blank canvas.  - Paul Cezanne
-6. 
 
 
 
@@ -87,16 +86,12 @@ because和in that在句子结构上的功能相同，都可以单独引导句子
 
 
 apply pressure to/on 按压，给…施加压力
- make the blood bleed slower.
-
-
  It is the duty of servicemen to shield their country from invasion.
 保护祖国不受侵略是军人的职责。
 
 
  The safety of those students caught up in the demonstration must be guaranteed.
 那些被卷入游行示威的学生的安全必须得到保证。 
-
 
 保留；预留
 reserve sth.for sb. /sth.
@@ -142,6 +137,17 @@ Success that you achieve through painstaking efforts is seen as valuable asset i
  I love recalling the past， especially when loneliness strikes.
 我喜欢回忆过去，特别是当孤寂来袭之时
 
+
+
+
+
+## 1211
+
+> Explicit is better than implicit.
+>
+> 明了胜于晦涩
+
+ 
 
 
 
